--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -5,9 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My App</title>
+    <title>Hello</title>
 </head>
 <body>
-    <p>Hello world!</p>
+hello
+<a href="/first/goodbye">go to goodbye</a>
 </body>
 </html>
